# open-spanner

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  RELEASING.md  Taskfile.yml  buf.gen.yaml  docker-compose.app.yml  docker-compose.yml  go.mod  go.sum  sqlc.yaml
docs/: README.md  docs.go  (+6 more)
sdk/python/: README.md  pyproject.toml
sdk/python/open_spanner_client/: __init__.py  stream.py
sdk/python/open_spanner_client/grpc/: __init__.py
sdk/python/open_spanner_client/models/: __init__.py  entitlement_check_request.py  entitlement_check_response.py  entitlement_progress.py  entitlement_progress_item.py  entitlement_state.py  entitlement_state_list_response.py  error_body.py  error_response.py  internal_metering_adapters_http_usage_event_search_request.py  internal_metering_adapters_http_usage_filter_request.py  internal_metering_adapters_http_usage_search_request.py  meter.py  meter_create_request.py  meter_create_request_metadata_schema.py  meter_dimension.py  meter_dimension_request.py  meter_list_response.py  meter_metadata_schema.py  meter_stats.py  meter_stats_list_response.py  meter_update_request.py  meter_update_request_metadata_schema.py  plan.py  plan_limit.py  subject_stats.py  subject_stats_list_response.py  subject_usage_event.py  subject_usage_event_metadata.py  system_last_prune_run.py  system_stats.py  usage_breakdown.py  usage_breakdown_list_response.py  usage_breakdown_request.py  usage_bucket.py  usage_bucket_group.py  usage_bulk_failure.py  usage_bulk_result.py  usage_create_request.py  usage_create_request_metadata.py  (+10 more)
(+861 files in other folders)
